--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -1,7 +1,32 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "webOptimizer": {
+    "enableCaching": true,
+    "enableMemoryCache": true,
+    "enableDiskCache": false,
+    "cacheDirectory": "/var/temp/weboptimizercache",
+    "enableTagHelperBundling": true,
+    "xxxcdnUrl": "https://my-cdn.com/",
+    "allowEmptyBundle": false
+  },
+  "Nuages":
+  {
+    "Localization": {
+      "DefaultCulture": "fr-CA",
+      "LangClaim": "lang",
+      "MissingTranslationUrl": null,
+      "Cultures": [
+        "fr-CA",
+        "en-CA"
+      ]
+    },
+    "LocalesUrl" : "https://locales-nuages.ngrok.io"
   }
 }
