--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -19,7 +19,7 @@
         <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.319" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.11" />
         <PackageReference Include="Nuages.Web" Version="1.2.0" />
-
+        <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.1.0" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
         <PackageReference Include="OpenIddict.MongoDb" Version="3.1.1" />
         <PackageReference Include="System.Linq.Async" Version="5.0.0" />
