--- a/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -7,4 +7,7 @@
         <OutputType>Library</OutputType>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="AspNetCore.Identity.Mongo" Version="8.3.3" />
+    </ItemGroup>
 </Project>
