--- a/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -9,5 +9,6 @@
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.Identity.Mongo" Version="8.3.3" />
+        <PackageReference Include="Nuages.Sender.API.Sdk" Version="1.1.3" />
     </ItemGroup>
 </Project>
