--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -21,6 +21,12 @@
 
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+        <PackageReference Include="NLog" Version="4.7.13" />
+        <PackageReference Include="AWS.Logger.NLog" Version="3.0.0" />
+                
+    </ItemGroup>
+    <ItemGroup>
       <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
       <ProjectReference Include="..\Nuages.Identity.UI.Endpoints\Nuages.Identity.UI.Endpoints.csproj" />
     </ItemGroup>
