--- a/Nuages.Identity.API.Endpoints/Nuages.Identity.API.Endpoints.csproj
+++ b/Nuages.Identity.API.Endpoints/Nuages.Identity.API.Endpoints.csproj
@@ -1,9 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>Library</OutputType>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
+    </ItemGroup>
+
+    
 
 </Project>
