--- a/Nuages.Identity.API/Nuages.Identity.API.csproj
+++ b/Nuages.Identity.API/Nuages.Identity.API.csproj
@@ -1,13 +1,42 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
+
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+        <AWSProjectType>Lambda</AWSProjectType>
+        <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
-
+    
     <ItemGroup>
+      <ProjectReference Include="..\Nuages.Identity.API.Endpoints\Nuages.Identity.API.Endpoints.csproj" />
       <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.11.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.1.0" />
+        <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.1" />
+        <PackageReference Include="AWSXRayRecorder" Version="2.10.1" />
+        <PackageReference Include="NSwag.AspNetCore" Version="13.15.5" />
+        <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="3.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Nuages.Localization" Version="1.2.0" />
+        <PackageReference Include="Nuages.Web" Version="1.1.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+        <PackageReference Include="NLog" Version="4.7.13" />
+        <PackageReference Include="AWS.Logger.NLog" Version="3.0.0" />
+    </ItemGroup>
 </Project>
