--- a/Nuages.Identity.API/appsettings.json
+++ b/Nuages.Identity.API/appsettings.json
@@ -1,6 +1,16 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
   "Nuages": {
-       
+    "IdentityAPI" :
+    {
+      "StackName" : "IdentityAPI"
+    },
     "Mongo": {
       "ConnectionString": "",
       "DatabaseName": ""
