--- a/Nuages.Identity.API/Nuages.Identity.API.csproj
+++ b/Nuages.Identity.API/Nuages.Identity.API.csproj
@@ -13,12 +13,14 @@
     
     <ItemGroup>
       <ProjectReference Include="..\Nuages.Identity.API.Endpoints\Nuages.Identity.API.Endpoints.csproj" />
+      <ProjectReference Include="..\Nuages.Identity.API.Services\Nuages.Identity.API.Services.csproj" />
       <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.11.1" />
+      <PackageReference Include="OpenIddict.Abstractions" Version="3.1.1" />
     </ItemGroup>
 
     <ItemGroup>
@@ -31,7 +33,7 @@
 
     <ItemGroup>
         <PackageReference Include="Nuages.Localization" Version="1.2.0" />
-        <PackageReference Include="Nuages.Web" Version="1.1.2" />
+        <PackageReference Include="Nuages.Web" Version="1.2.3" />
     </ItemGroup>
 
     <ItemGroup>
