--- a/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.Identity.Mongo" Version="8.3.3" />
+        <PackageReference Include="Nuages.Localization" Version="1.2.0" />
         <PackageReference Include="Nuages.Sender.API.Sdk" Version="1.1.7" />
         <PackageReference Include="Nuages.Web" Version="1.2.7" />
     </ItemGroup>
