--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -22,7 +22,9 @@
         <PackageReference Include="AWS.Logger.NLog" Version="3.0.0" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
         <PackageReference Include="NLog" Version="4.7.13" />
-        
+        <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
+        <PackageReference Include="OpenIddict.MongoDb" Version="3.1.1" />
+        <PackageReference Include="System.Linq.Async" Version="5.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.1" />
        
         <PackageReference Include="Nuages.Localization" Version="1.2.0" />
@@ -31,7 +33,7 @@
     </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\Nuages.Identity.UI.Endpoints\Nuages.Identity.UI.Endpoints.csproj" />
+      <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="..\locales\en-CA.json" CopyToOutputDirectory="Always">
