--- a/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -8,11 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AspNetCore.Identity.Mongo" Version="8.3.3" />
         <PackageReference Include="Nuages.Localization" Version="1.2.0" />
         <PackageReference Include="Nuages.Sender.API.Sdk" Version="1.1.7" />
         <PackageReference Include="Nuages.Web" Version="1.2.7" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
         <PackageReference Include="System.Linq.Async" Version="5.1.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
     </ItemGroup>
 </Project>
