--- a/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -17,6 +17,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Nuages.AspNetIdentity\Nuages.AspNetIdentity.csproj" />
+      <ProjectReference Include="..\Nuages.AspNetIdentity.Core\Nuages.AspNetIdentity.Core.csproj" />
     </ItemGroup>
 </Project>
