--- a/Nuages.Identity.API/Nuages.Identity.API.csproj
+++ b/Nuages.Identity.API/Nuages.Identity.API.csproj
@@ -12,7 +12,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\Nuages.AspNetIdentity.Mongo\Nuages.AspNetIdentity.Mongo.csproj" />
+      <ProjectReference Include="..\Nuages.AspNetIdentity.Stores.Mongo\Nuages.AspNetIdentity.Stores.Mongo.csproj" />
       <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
     </ItemGroup>
 
