--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -33,7 +33,7 @@
     </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\Nuages.AspNetIdentity.Mongo\Nuages.AspNetIdentity.Mongo.csproj" />
+      <ProjectReference Include="..\Nuages.AspNetIdentity.Stores.Mongo\Nuages.AspNetIdentity.Stores.Mongo.csproj" />
       <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
     </ItemGroup>
     <ItemGroup>
