--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -13,6 +13,7 @@
         <Exec Command="npm run css:build" />
     </Target>
     
+        
     <ItemGroup>
         <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.1" />
         <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.1.0" />
@@ -28,8 +29,8 @@
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.2" />
        
         <PackageReference Include="Nuages.Localization" Version="1.3.1" />
-        
         <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.357" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1"/>
     </ItemGroup>
     
     <ItemGroup>
