--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -30,7 +30,7 @@
        
         <PackageReference Include="Nuages.Localization" Version="1.3.1" />
         <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.357" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
     </ItemGroup>
     
     <ItemGroup>
@@ -45,6 +45,13 @@
             <Link>locales\fr-CA.json</Link>
         </Content>
     
+    </ItemGroup>
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Device\Verify.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Shared\LogoHeader.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Shared\_Layout.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\_ViewImports.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\_ViewStart.cshtml" />
     </ItemGroup>
    
 </Project>
