--- a/Nuages.Identity.UI.Tests/Nuages.Identity.UI.Tests.csproj
+++ b/Nuages.Identity.UI.Tests/Nuages.Identity.UI.Tests.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.1.1" />
         <PackageReference Include="Otp.NET" Version="1.2.2" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
