--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -21,9 +21,12 @@
         <PackageReference Include="AWSXRayRecorder.Core" Version="2.10.1" />
         <PackageReference Include="AWSXRayRecorder.Handlers.AwsSdk" Version="2.8.3" />
         <PackageReference Include="AWS.Logger.NLog" Version="3.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.2" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
         <PackageReference Include="NLog" Version="4.7.13" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
+        <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.1.1" />
         <PackageReference Include="OpenIddict.MongoDb" Version="3.1.1" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.2" />
