--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="AWS.Logger.NLog" Version="3.0.0" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Nuages.AspNetIdentity.Stores.Mongo" Version="0.0.2" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
         <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.1.1" />
         <PackageReference Include="OpenIddict.MongoDb" Version="3.1.1" />
@@ -43,7 +44,6 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Nuages.AspNetIdentity.Stores.Mongo\Nuages.AspNetIdentity.Stores.Mongo.csproj" />
         <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
     </ItemGroup>
     <ItemGroup>
