--- a/Nuages.Identity.Cdk.Deploy/appsettings.json
+++ b/Nuages.Identity.Cdk.Deploy/appsettings.json
@@ -1,6 +1,18 @@
 {
-  "StackName": "",
+  "StackName": "NuagesIdentity",
   "DomainName": "",
   "DomainNameApi": "",
-  "CertificateArn": ""
+  "CertificateArn": "",
+  "ApplicationConfig": {
+    "ParameterStore": {
+      "Enabled": true,
+      "Path": "/NuagesIdentity/Pipeline"
+    },
+    "AppConfig": {
+      "Enabled": true,
+      "ApplicationId": "NuagesIdentity",
+      "EnvironmentId": "Prod",
+      "ConfigProfileId": "StackConfiguration"
+    }
+  }
 }
