--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -26,5 +26,17 @@
         "en-CA"
       ]
     }
+  },
+  "ApplicationConfig": {
+    "ParameterStore": {
+      "Enabled": true,
+      "Path": "/NuagesIdentity"
+    },
+    "AppConfig": {
+      "Enabled": true,
+      "ApplicationId": "NuagesIdentity",
+      "EnvironmentId": "Prod",
+      "ConfigProfileId": "WebUI"
+    }
   }
 }
