--- a/Nuages.Identity.Cdk.Deploy/Nuages.Identity.Cdk.Deploy.csproj
+++ b/Nuages.Identity.Cdk.Deploy/Nuages.Identity.Cdk.Deploy.csproj
@@ -13,6 +13,9 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.1" />
+        <PackageReference Include="Nuages.Web" Version="1.3.13" />
+        <PackageReference Include="AWSSDK.AppConfig" Version="3.7.1.29" />
+        <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="3.0.0" />
     </ItemGroup>
     <ItemGroup>
         <!-- CDK Construct Library dependencies -->
@@ -30,7 +33,6 @@
     </ItemGroup>
     <ItemGroup>
         <None Remove="appsettings.prod.json" />
-        <Content Include="appsettings.prod.json" CopyToOutputDirectory="Always" Condition="Exists('appsettings.prod.json')" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Nuages.Identity.Cdk\Nuages.Identity.Cdk.csproj" />
