--- a/Nuages.Identity.Cdk.Deploy/Nuages.Identity.Cdk.Deploy.csproj
+++ b/Nuages.Identity.Cdk.Deploy/Nuages.Identity.Cdk.Deploy.csproj
@@ -6,6 +6,7 @@
         <!-- Roll forward to future major versions of the netcoreapp as needed -->
         <RollForward>Major</RollForward>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
