--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "XRay": {
+    "DisableXRayTracing": "true",
+    "UseRuntimeErrors": "true",
+    "CollectSqlQueries": "false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
