--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -7,6 +7,7 @@
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <Nullable>enable</Nullable>
         <ImplicitUsings>true</ImplicitUsings>
+        <PublishReadyToRun>true</PublishReadyToRun>
     </PropertyGroup>
 
     <Target Name="Tailwind" BeforeTargets="Build">
@@ -14,7 +15,7 @@
     </Target>
     
     <ItemGroup>
-        <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.1" />
+        <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.0.0" />
         <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.1.0" />
         <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="3.0.0" />
         <PackageReference Include="AWSXRayRecorder.Core" Version="2.10.1" />
@@ -42,6 +43,9 @@
         
         <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.357" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
+    </ItemGroup>
+    <ItemGroup>
+        <InternalsVisibleTo Include="Nuages.Identity.UI.Tests" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
