--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -43,5 +43,10 @@
       "EnvironmentId": "Prod",
       "ConfigProfileId": "WebUI"
     }
+  },
+  "fido2": {
+    "serverDomain": "localhost",
+    "origin": "https://localhost:8001",
+    "timestampDriftTolerance": 300000
   }
 }
