--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -47,6 +47,7 @@
   "fido2": {
     "serverDomain": "localhost",
     "origin": "https://localhost:8001",
-    "timestampDriftTolerance": 300000
+    "timestampDriftTolerance": 300000,
+    "serverName" : "Nuages"
   }
 }
