--- a/Nuages.Fido2.Storage.EntityFramework/Nuages.Fido2.Storage.EntityFramework.csproj
+++ b/Nuages.Fido2.Storage.EntityFramework/Nuages.Fido2.Storage.EntityFramework.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Nuages.Fido2\Nuages.Fido2.csproj" />
+      <ProjectReference Include="..\Nuages.Identity.Fido2\Nuages.Identity.Fido2.csproj" />
     </ItemGroup>
 
     <ItemGroup>
