--- a/Nuages.Identity.Fido2/Nuages.Identity.Fido2.csproj
+++ b/Nuages.Identity.Fido2/Nuages.Identity.Fido2.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Library</OutputType>
+        <RootNamespace>Nuages.Fido2</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
