--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -50,12 +50,11 @@
         <InternalsVisibleTo Include="Nuages.Identity.UI.Tests" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Nuages.Fido2.AspNetIdentity\Nuages.Fido2.AspNetIdentity.csproj" />
         <ProjectReference Include="..\Nuages.Fido2.Storage.EntifyFramework.MySql\Nuages.Fido2.Storage.EntifyFramework.MySql.csproj" />
         <ProjectReference Include="..\Nuages.Fido2.Storage.EntityFramework.SqlServer\Nuages.Fido2.Storage.EntityFramework.SqlServer.csproj" />
         <ProjectReference Include="..\Nuages.Fido2.Storage.EntityFramework\Nuages.Fido2.Storage.EntityFramework.csproj" />
         <ProjectReference Include="..\Nuages.Fido2.Storage.Mongo\Nuages.Fido2.Storage.Mongo.csproj" />
-        <ProjectReference Include="..\Nuages.Fido2\Nuages.Fido2.csproj" />
+        <ProjectReference Include="..\Nuages.Identity.Fido2\Nuages.Identity.Fido2.csproj" />
         <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
         <ProjectReference Include="..\Nuages.Identity.Storage.MySql\Nuages.Identity.Storage.MySql.csproj" />
         <ProjectReference Include="..\Nuages.Identity.Storage.SqlServer\Nuages.Identity.Storage.SqlServer.csproj" />
