--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -30,6 +30,16 @@
         "fr-CA",
         "en-CA"
       ]
+    },
+    "UI":
+    {
+      "ShowRegistration" : true,
+      "ExternalLoginAutoEnrollIfEmailExists" : true,
+      "ExternalLoginPersistent" : true,
+      "EnablePasswordless" : true,
+      "EnablePhoneFallback" : true,
+      "Enable2FARememberDevice" : true,
+      "FontAwesomeUrl" : "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js"
     }
   },
   "ApplicationConfig": {
@@ -50,4 +60,5 @@
     "timestampDriftTolerance": 300000,
     "serverName" : "Nuages"
   }
+  
 }
