--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -26,6 +26,7 @@
         <PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
         <PackageReference Include="Nuages.AspNetIdentity.Stores.Mongo" Version="1.0.6" />
+        <PackageReference Include="Nuages.AWS" Version="1.0.8" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
         <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.1.1" />
         <PackageReference Include="OpenIddict.MongoDb" Version="3.1.1" />
