--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -21,6 +21,7 @@
     "xxxcdnUrl": "https://my-cdn.com/",
     "allowEmptyBundle": false
   },
+  "AllowedCorsDomain" : "http://localhost:3000",
   "Nuages": {
     "Localization": {
       "DefaultCulture": "fr-CA",
@@ -54,6 +55,7 @@
       "ConfigProfileId": "WebUI"
     }
   },
+
   "fido2": {
     "serverDomain": "localhost",
     "origin": "https://localhost:8001",
