--- a/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -7,10 +7,13 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Nuages.Localization" Version="1.4.2" />
-        <PackageReference Include="Nuages.Sender.API.Sdk" Version="1.3.3" />
+        <PackageReference Include="Nuages.Sender.Services" Version="1.3.3" />
         <PackageReference Include="Nuages.Web" Version="1.3.15" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+        <PackageReference Include="Fluid.Core" Version="2.2.14" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
+        <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.0.138" />
     </ItemGroup>
  
 </Project>
