--- a/Nuages.Identity.Cdk.Deploy/Nuages.Identity.Cdk.Deploy.csproj
+++ b/Nuages.Identity.Cdk.Deploy/Nuages.Identity.Cdk.Deploy.csproj
@@ -29,6 +29,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Content Include="templates.json" CopyToOutputDirectory="Always" >
+        </Content>
         <None Remove="appsettings.json" />
         <Content Include="appsettings.json" CopyToOutputDirectory="Always" />
     </ItemGroup>
