--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -23,6 +23,11 @@
   },
   "AllowedCorsDomain" : "http://localhost:3000",
   "Nuages": {
+    "MessageService":
+    {
+      "SendFromEmail" : "",
+      "DefaultCulture" : "en"
+    },
     "Localization": {
       "DefaultCulture": "fr-CA",
       "LangClaim": "lang",
