--- a/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -9,47 +9,45 @@
         <ImplicitUsings>true</ImplicitUsings>
         <PublishReadyToRun>true</PublishReadyToRun>
     </PropertyGroup>
-
     <Target Name="Tailwind" BeforeTargets="Build">
         <Exec Command="npm run css:build" />
     </Target>
+    <ItemGroup>
+        <PackageReference Include="AWSSDK.SimpleEmailV2" Version="3.7.1.66" />
+        <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.3.32" />
+        <PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
+        <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.3" />  
+    </ItemGroup>    
     
+    <ItemGroup>
+        <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
+        <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.1.1" />
+        <PackageReference Include="OpenIddict.MongoDb" Version="3.1.1" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+        <PackageReference Include="NLog" Version="4.7.14" />         
+        <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.357" />       
+    </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.1.0" />
         <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.1.0" />
         <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="3.0.0" />
         <PackageReference Include="AWSXRayRecorder.Core" Version="2.10.1" />
         <PackageReference Include="AWSXRayRecorder.Handlers.AwsSdk" Version="2.8.3" />
-        <PackageReference Include="AWS.Logger.NLog" Version="3.0.0" /> 
+        <PackageReference Include="AWS.Logger.NLog" Version="3.0.0" />
     </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
-        <PackageReference Include="Nuages.AspNetIdentity.Stores.Mongo" Version="1.0.7" />
-        <PackageReference Include="Nuages.AWS" Version="1.0.8" />
-        <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
-        <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.1.1" />
-        <PackageReference Include="OpenIddict.MongoDb" Version="3.1.1" />
-    </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="Nuages.Web" Version="1.3.15" />
         <PackageReference Include="Nuages.Localization" Version="1.4.2" />
+        <PackageReference Include="Nuages.AWS" Version="1.0.8" />
+        <PackageReference Include="Nuages.AspNetIdentity.Stores.Mongo" Version="1.0.7" />
     </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.3" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.3" />
-        
-        <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
-        <PackageReference Include="NLog" Version="4.7.14" />
-        <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-        
-        <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.357" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
-    </ItemGroup>
-    <ItemGroup>
-        <InternalsVisibleTo Include="Nuages.Identity.UI.Tests" />
-    </ItemGroup>
+   
     <ItemGroup>
         <ProjectReference Include="..\Nuages.Fido2.Storage.EntifyFramework.MySql\Nuages.Fido2.Storage.EntifyFramework.MySql.csproj" />
         <ProjectReference Include="..\Nuages.Fido2.Storage.EntityFramework.SqlServer\Nuages.Fido2.Storage.EntityFramework.SqlServer.csproj" />
@@ -59,6 +57,9 @@
         <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
         <ProjectReference Include="..\Nuages.Identity.Storage.MySql\Nuages.Identity.Storage.MySql.csproj" />
         <ProjectReference Include="..\Nuages.Identity.Storage.SqlServer\Nuages.Identity.Storage.SqlServer.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+        <InternalsVisibleTo Include="Nuages.Identity.UI.Tests" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="..\locales\en-CA.json" CopyToOutputDirectory="Always">
