--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -6,8 +6,8 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Debug",
+      "Default": "Information",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
