--- a/Nuages.Identity.Storage.MySql/Nuages.Identity.Storage.MySql.csproj
+++ b/Nuages.Identity.Storage.MySql/Nuages.Identity.Storage.MySql.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
+      <ProjectReference Include="..\Nuages.Identity.Storage.EntityFramework\Nuages.Identity.Storage.EntityFramework.csproj" />
     </ItemGroup>
 
 </Project>
