--- a/Nuages.Identity.Fido2.Storage/Nuages.Identity.Fido2.Storage.csproj
+++ b/Nuages.Identity.Fido2.Storage/Nuages.Identity.Fido2.Storage.csproj
@@ -7,9 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
+      <PackageReference Include="Fido2.AspNet" Version="2.0.2" />
     </ItemGroup>
-    <ItemGroup>
-        <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
-    </ItemGroup>
+
 </Project>
