--- a/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -6,10 +6,18 @@
         <OutputType>Library</OutputType>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
         <PackageReference Include="Nuages.Localization" Version="1.4.2" />
         <PackageReference Include="Nuages.Web" Version="1.3.15" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+        <PackageReference Include="Fido2.AspNet" Version="3.0.0-beta2" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Nuages.Identity.Fido2.Storage\Nuages.Identity.Fido2.Storage.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Fido2" />
     </ItemGroup>
  
 </Project>
