--- a/Nuages.Identity.UI/appsettings.json
+++ b/Nuages.Identity.UI/appsettings.json
@@ -45,7 +45,7 @@
       "EnablePasswordless" : true,
       "EnablePhoneFallback" : true,
       "Enable2FARememberDevice" : true,
-      "FontAwesomeUrl" : "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js"
+      "FontAwesomeUrl" : "https://kit.fontawesome.com/70b74b4315.js"
     }
   },
   "ApplicationConfig": {
