--- a/Nuages.Identity.Cdk.Deploy/Nuages.Identity.Cdk.Deploy.csproj
+++ b/Nuages.Identity.Cdk.Deploy/Nuages.Identity.Cdk.Deploy.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.1" />
+        <PackageReference Include="Nuages.AWS" Version="1.0.9" />
         <PackageReference Include="Nuages.Web" Version="1.3.16" />
         <PackageReference Include="AWSSDK.AppConfig" Version="3.7.1.40" />
         <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="3.0.0" />
