--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -7,7 +7,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Information",
+      "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
@@ -21,7 +21,6 @@
     "xxxcdnUrl": "https://my-cdn.com/",
     "allowEmptyBundle": false
   },
-  "AllowedCorsDomain" : "http://localhost:3000",
   "Nuages": {
     "MessageService":
     {
@@ -45,6 +44,7 @@
       "EnablePasswordless" : true,
       "EnablePhoneFallback" : true,
       "Enable2FARememberDevice" : true,
+      "EnableFido2" : true,
       "FontAwesomeUrl" : "https://kit.fontawesome.com/70b74b4315.js"
     }
   },
@@ -60,7 +60,36 @@
       "ConfigProfileId": "WebUI"
     }
   },
-
+  "Identity": {
+    "Name": "Nuages",
+    "Authority": "https://localhost:8001",
+    "SupportsAutoPasswordExpiration": true,
+    "AutoExpirePasswordDelayInDays": 60,
+    "SupportsLoginWithEmail": true,
+    "AutoConfirmExternalLogin": true,
+    "Audiences": ["MyAudience"],
+    "Password": {
+      "RequiredLength": 6,
+      "RequireNonAlphanumeric": true,
+      "RequireLowercase": true,
+      "RequireUppercase": true,
+      "RequireDigit": true,
+      "RequiredUniqueChars": 1
+    },
+    "Web":
+    {
+      "GoogleRecaptcha" :
+      {
+        "SiteKey" : null,
+        "SecretKey" : null
+      }
+    }
+  },
+  "Google" :
+  {
+    "ClientId" : null,
+    "ClientSecret" : null
+  },
   "fido2": {
     "serverDomain": "localhost",
     "origin": "https://localhost:8001",
