OpenIdDict SqlServer + MySql

--- a/src/Nuages.Identity.Storage.SqlServer/Nuages.Identity.Storage.SqlServer.csproj
+++ b/src/Nuages.Identity.Storage.SqlServer/Nuages.Identity.Storage.SqlServer.csproj
@@ -25,4 +25,8 @@
     <ItemGroup>
       <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
 </Project>
