--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -21,12 +21,13 @@
     "xxxcdnUrl": "https://my-cdn.com/",
     "allowEmptyBundle": false
   },
+  "AllowedCorsDomain" : null,
   "Nuages": {
-    "MessageService":
-    {
-      "SendFromEmail" : "",
-      "DefaultCulture" : "en"
+    "MessageService": {
+      "SendFromEmail": "",
+      "DefaultCulture": "en"
     },
+    "Storage": "InMemory",
     "Localization": {
       "DefaultCulture": "fr-CA",
       "LangClaim": "lang",
@@ -36,16 +37,15 @@
         "en-CA"
       ]
     },
-    "UI":
-    {
-      "ShowRegistration" : true,
-      "ExternalLoginAutoEnrollIfEmailExists" : true,
-      "ExternalLoginPersistent" : true,
-      "EnablePasswordless" : true,
-      "EnablePhoneFallback" : true,
-      "Enable2FARememberDevice" : true,
-      "EnableFido2" : true,
-      "FontAwesomeUrl" : "https://kit.fontawesome.com/70b74b4315.js"
+    "UI": {
+      "ShowRegistration": true,
+      "ExternalLoginAutoEnrollIfEmailExists": true,
+      "ExternalLoginPersistent": true,
+      "EnablePasswordless": true,
+      "EnablePhoneFallback": true,
+      "Enable2FARememberDevice": true,
+      "EnableFido2": true,
+      "FontAwesomeUrl": "https://kit.fontawesome.com/70b74b4315.js"
     },
     "Identity": {
       "Name": "Nuages",
@@ -54,7 +54,9 @@
       "AutoExpirePasswordDelayInDays": 60,
       "SupportsLoginWithEmail": true,
       "AutoConfirmExternalLogin": true,
-      "Audiences": ["MyAudience"],
+      "Audiences": [
+        "MyAudience"
+      ],
       "Password": {
         "RequiredLength": 6,
         "RequireNonAlphanumeric": true,
@@ -62,33 +64,29 @@
         "RequireUppercase": true,
         "RequireDigit": true,
         "RequiredUniqueChars": 1
-      },
-  },
-  "ApplicationConfig": {
-    "ParameterStore": {
-      "Enabled": true,
-      "Path": "/NuagesIdentity"
+      }
     },
-    "AppConfig": {
-      "Enabled": true,
-      "ApplicationId": "NuagesIdentity",
-      "EnvironmentId": "Prod",
-      "ConfigProfileId": "WebUI"
-    }
-  },
-    "Web":
-    {
-      "GoogleRecaptcha" :
-      {
-        "SiteKey" : null,
-        "SecretKey" : null
+    "ApplicationConfig": {
+      "ParameterStore": {
+        "Enabled": true,
+        "Path": "/NuagesIdentity"
+      },
+      "AppConfig": {
+        "Enabled": true,
+        "ApplicationId": "NuagesIdentity",
+        "EnvironmentId": "Prod",
+        "ConfigProfileId": "WebUI"
+      }
+    },
+    "Web": {
+      "GoogleRecaptcha": {
+        "SiteKey": null,
+        "SecretKey": null
       }
     }
   },
-  "Google" :
-  {
-    "ClientId" : null,
-    "ClientSecret" : null
+  "Google": {
+    "ClientId": null,
+    "ClientSecret": null
   }
-  
 }
