--- a/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Nuages.Localization" Version="1.4.3" />
         <PackageReference Include="Nuages.Web" Version="1.3.16" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
+        <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="3.1.1" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
         <PackageReference Include="Fido2.AspNet" Version="3.0.0-beta2" />
     </ItemGroup>
