--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -27,7 +27,11 @@
       "SendFromEmail": "",
       "DefaultCulture": "en"
     },
-    "Storage": "InMemory",
+    "Data" :
+    {
+      "Storage": "InMemory",
+      "ConnectionString" : null
+    },
     "Localization": {
       "DefaultCulture": "fr-CA",
       "LangClaim": "lang",
