Add docker support

--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "XRay": {
     "DisableXRayTracing": "true",
-    "UseRuntimeErrors": "true",
+    "UseRuntimeErrors": "false",
     "CollectSqlQueries": "false"
   },
   "Logging": {
