--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "HttpOptions" :
+  {
+    "RedirectPort" : true,
+    
+  },
   "AllowedHosts": "*",
   "webOptimizer": {
     "enableCaching": true,
