--- a/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -65,10 +65,9 @@
         <Content Include="..\..\locales\fr-CA.json" CopyToOutputDirectory="Always">
             <Link>locales\fr-CA.json</Link>
         </Content>
-       
-<!--        <Content Include=".platform\nginx\conf.d\config.conf">-->
-<!--          <CopyToOutputDirectory>Always</CopyToOutputDirectory>-->
-<!--        </Content>-->
+        <Content Include="..\..\templates.json" CopyToOutputDirectory="Always">
+            <Link>templates.json</Link>
+        </Content>
        
     </ItemGroup>
 </Project>
