--- a/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -70,4 +70,8 @@
         </Content>
        
     </ItemGroup>
+    <ItemGroup>
+        <None Remove="appsettings.prod.json" />
+        <Content Include="appsettings.prod.json" CopyToOutputDirectory="Always" Condition="Exists('appsettings.prod.json')" />
+    </ItemGroup>
 </Project>
