--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -74,11 +74,11 @@
     },
     "ApplicationConfig": {
       "ParameterStore": {
-        "Enabled": false,
+        "Enabled": true,
         "Path": "/NuagesIdentity"
       },
       "AppConfig": {
-        "Enabled": false,
+        "Enabled": true,
         "ApplicationId": "NuagesIdentity",
         "EnvironmentId": "Prod",
         "ConfigProfileId": "WebUI"
