--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -55,7 +55,7 @@
       "SupportsLoginWithEmail": true,
       "AutoConfirmExternalLogin": true,
       "Audiences": [
-        "MyAudience"
+        "IdentityAPI"
       ],
       "Password": {
         "RequiredLength": 6,
@@ -83,10 +83,12 @@
         "EnvironmentId": "Prod",
         "ConfigProfileId": "WebUI"
       }
+    },
+    "OpenIdProviders": {
+      "Google": {
+        "ClientId": null,
+        "ClientSecret": null
+      }
     }
-  },
-  "Google": {
-    "ClientId": null,
-    "ClientSecret": null
   }
 }
