--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -26,7 +26,7 @@
     "Data" :
     {
       "Storage": "InMemory",
-      "ConnectionString" : null
+      "ConnectionString" : ""
     },
     "Localization": {
       "DefaultCulture": "fr-CA",
@@ -66,10 +66,17 @@
         "RequiredUniqueChars": 1
       }
     },
+    "OpenIdDict": {
+      "Storage": "InMemory",
+      "ConnectionString": "",
+      "Database": "",
+      "EncryptionKey": "",
+      "SigningKey": ""
+    },
     "Web": {
       "GoogleRecaptcha": {
-        "SiteKey": null,
-        "SecretKey": null
+        "SiteKey": "",
+        "SecretKey": ""
       }
     },
     "ApplicationConfig": {
@@ -86,8 +93,8 @@
     },
     "OpenIdProviders": {
       "Google": {
-        "ClientId": null,
-        "ClientSecret": null
+        "ClientId": "",
+        "ClientSecret": ""
       }
     }
   }
