--- a/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -6,6 +6,7 @@
         <OutputType>Library</OutputType>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.1" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
         <PackageReference Include="Nuages.Localization" Version="1.4.4" />
         <PackageReference Include="Nuages.Web" Version="1.3.16" />
@@ -13,6 +14,9 @@
         <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="3.1.1" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
         <PackageReference Include="Fido2.AspNet" Version="3.0.0-beta2" />
+        <PackageReference Include="AWSSDK.SimpleEmailV2" Version="3.7.1.72" />
+        <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.3.45" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     </ItemGroup>
    
  
